fix align SelectedBorder

--- a/card_maker/src/components/SelectedBorder/SelectedBorder.module.css
+++ b/card_maker/src/components/SelectedBorder/SelectedBorder.module.css
@@ -23,7 +23,8 @@
 .top-center {
     cursor: ns-resize;
     top: -5px;
-    right: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .top-right {
@@ -34,8 +35,9 @@
 
 .right-center {
     cursor: ew-resize;
-    top: 50%;
     right: -5px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .bottom-right {
@@ -47,7 +49,8 @@
 .bottom-center {
     cursor: ns-resize;
     bottom: -5px;
-    right: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .bottom-left {
@@ -60,4 +63,5 @@
     cursor: ew-resize;
     left: -5px;
     top: 50%;
+    transform: translateY(-50%);
 }
